assets/css/style.css
html {
	scroll-behavior: smooth;
	-webkit-overflow-scrolling: touch;
  }
  
  body {
	margin: 0;
	font-family: 'Open Sans', sans-serif;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.5;
	color: #515d5f;
	background-color: #fff;
  }

  /* Nav bar */
  
  .navbar-brand {
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 24px;
  margin: 10px 0 2px;
  color:#F2AA98 !important;
  }
  
  .navbar-brand {
	  font-size: 1.7rem;
	  font-weight: 600;
	  }
  
  .navbar-brand:hover {
	  color: #92374D !important;
  }
  
  .nav-link {
  color:#F2AA98 !important;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 20px;
  margin: 8px 2px 2px;
  } 
  
  .nav-item a:hover {
  color: #92374D !important;
  }
 
 .navbar-toggler {
	 background-color: #fff;
    padding: .25rem .75rem;
    font-size: 1.25rem;
    line-height: 1;
    border: 2px solid #F2AA98 !important;
    border-radius: .25rem;
} 

.navbar-light {
	background-color: #fff !important;
}


  /* Rounded images */
  .image-fit-cover {
	  object-fit: cover;
  }
  
  /* Jumbotron  */
  
  #home-section {
	min-height: 80vh;
	width: 100%;
	background: linear-gradient(rgba(0.5,0.5,0.5,0.5), rgba(0.5,0.5,0.5,0.5)), url('../images/meditation.jpg') no-repeat center center;
	background-position: bottom;
	background-repeat: no-repeat;
	background-attachment: scroll;
	background-size: cover;
  }
  /* 
  #home-container-fluid {
	  padding-top: 5em;
  } */
  
   .jumbotron-custom {
  background-color: #ffffff00;
  color: white;
  }
  
  .jumbotron-content {
	background-color: transparent;
	margin-top: 2rem;
	-ms-flex-line-pack: center;
	align-content: center;
  }
  
  .jumbotron-content h1 {
	font-size: 2rem;
  }
  
  .jumbotron-button {
	margin-top: 30px;
	border: transparent;
  }
  
  /* colors, headings, buttons, spacing, divider */
  .section-heading {
	line-height: 1.4;
	color:#F2AA98;
}
  .btn-light-blue {
	  background-color: #F2AA98;
	  border-color: transparent;
	  color: white;
	  text-transform: uppercase;
	  letter-spacing: 2px;
	  padding: 15px 30px;
	  font-weight: 600;
	  }
	  .btn-light-blue:hover {
	  background-color: #92374D;
	  border-color: #F2AA98;
	  color: #fff;
	  }

	  .btn-testimonial {
		background-color: #fff;
		border-color: #F2AA98;
		color: #F2AA98;
		letter-spacing: 2px;;
		padding: 15px 30px;
		font-weight: 600
	  }

	  .btn-testimonial:hover {
		background-color: #92374D;
		border-color: transparent;
		color: #fff;
		}
	  
	  .divider-section {
	  width: 20%;               
	  background: #F2AA98;
	  height: 2px;
	  margin-top: 1rem;
	  }
	  
	  
	  .divider-section-white {
	  width: 20%;               
	  background: #fff;
	  height: 2px;
	  margin-top: 1rem;
	  }
  
	  .footer-divider {
	  background: #fff;
	  height: 2px;
	  margin-top: 1rem;	
	  }
	  
	  /* about section */
	  
  .about-section {
  text-align: center;
  font-size: 22px;
  line-height: 1.4;
  } 
  
  /* how it works section */
  
  #works-section {
  background-color: #F2AA98;
  color:#fff;
  }
  
  .works-heading{
  font-weight: 400;
  font-size: 28px;
  line-height: 1.4;
  position: relative;
  }

  .works-section{
  font-size: 16px;
  line-height: 1.4;
  }
  
  .works-reasons h3 {
  font-size: 22px;
  font-weight: 400;
  
  }
  
  .works-reasons {
  font-size: 16px;
  }
  
  ul {
  list-style-type: none;
  list-style-position: outside; 
  padding: 0;
  margin: 0;
  }  
.list-group-item{
	background-color: #F2AA98;
}

/* .card-lines {
	border: 0px;
}
.list-group-item {
	border: 0px;
	position: center;
} */
  /* New team section */
  
   .team-member {
	  margin-bottom: 3rem;
	  text-align: center;
	}
	.team-member img {
	  width: 14rem;
	  height: 14rem;
	  border: 0.5rem solid #F2AA98;
	}
	.team-member h4 {
	  margin-top: 1.5rem;
	  margin-bottom: 0;
	}
	
	.img-brand {
	  height: 2.75rem;
	}
  

  
  /* Testinomials carousel */
  #testimonial-section{
	  background-color: #F2AA98;
	  color:#fff;
  }
  
  .col-center {
	  margin: 0 auto;
	  float: none !important;
  }
  
  .carousel .carousel-item {
	  color:#fff;
	  font-size: 14px;
	  text-align: center;
	  overflow: hidden;
	  min-height: 290px;
  }
  .carousel .carousel-item .img-box {
	  width: 14rem;
	  height: 14rem;
	  margin: 0 auto;
	  border: 0.5rem solid #fff;
	  border-radius: 50%;
  }
  
  .carousel .img-box img {
	  width: 100%;
	  height: 100%;
	  display: block;
	  border-radius: 50%;
  }
  
  .carousel .testimonial {
	  padding: 30px 0 10px;
  }
  .carousel .overview {	
	  font-style: italic;
  }
  .carousel .overview b {
	  text-transform: uppercase;
  }
  .carousel-control-prev, .carousel-control-next {
	  width: 40px;
	  height: 40px;
	  margin-top: -20px;
	  top: 50%;
	  background: none;
  }
  .carousel-control-prev i, .carousel-control-next i {
	  font-size: 3rem;
	  line-height: 42px;
	  position: absolute;
	  display: inline-block;
	  color:#fff;
	  text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
  }
  .carousel-indicators {
	  bottom: -40px;
  }
  .carousel-indicators li, .carousel-indicators li.active {
	  width: 12px;
	  height: 12px;
	  margin: 1px 3px;
	  border-radius: 50%;
	  border: none;
  }
  .carousel-indicators li {	
	  background: #fff;
	  border-color: transparent;
	  box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
  }
  .carousel-indicators li.active {	
	  background: #fff;		
	  box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
  }
  
  /* footer */
  
  footer {
  padding-top: 30px;
  background-color: #F2AA98;
  color: #fff;
  }
  
  footer a {
  color: #92374d;
  text-decoration:none;
  }
  
  footer a:hover, footer a:focus {
  color: #aaa;
  text-decoration:none;
  }
  
  footer .form-control {
	background-color: #fff;
	box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
	border: none;
	resize: none;
	color: #d1d2d2;
	padding: 0.7em 1em;
  }
  
  .btn-footer {
	  background-color: #fff;
	  border-color: transparent;
	  color: #F2AA98;
	  text-transform: uppercase;
	  letter-spacing: 2px;
	  padding: 15px 30px;
	  font-weight: 600;
  }
  
  .btn-footer:hover {
	  background-color: #92374D;
	  border-color: transparent;
	  color: #fff;	
  }
  
  
  /* social  */
	.social-networks {
	  text-align: center;
	}
	
	.social-networks > li {
	  display: inline;
	}
	
	.social-networks i {
	  font-size: 140%;
	  margin: 1%;
	  padding: 5%;
	  color: #fff;
	}
	.social-networks i:hover{
	  color: #92374D;
	}
  
   /* login form */
  
  .btn-log-in {
  background-color: #F2AA98;
  border-color: transparent;
  color: white;
  text-transform: uppercase;
  letter-spacing: 2px;
  padding: 15px 30px;
  font-weight: 600;
	  }
  
  .btn-log-in:hover {
	  background-color: #92374D;
	  border-color: transparent;
	  color: #fff;
	  }
  
  .divider-section-log-in {
	  width:100%;
	  background: #F2AA98;
	  height: 2px;
	  margin-top: 1rem;
  }
  
  
  /* Gallery */
  
     #gallery-section {
	  min-height: 20em;
    }

    #gallery-section img {
	  object-fit: cover;
	  max-width:15em;
	  min-height: 20em;
     }
  
    #gallery-section  .gallery-col {
	  background-size: cover;
	  height: 40em;
	  border: white;
	  border-style: solid;
  }
  
	#gallery-section #image-1 {
	  background-image: url('../images/gallery-4.jpg'); 
  }
    #gallery-section #image-2 {
	  background-image: url('../images/gallery-8.JPG'); 
  }
    #gallery-section #image-3 {
	  background-image: url('../images/gallery-7.JPG'); 
  }
    #gallery-section #image-4 {
	  background-image: url('../images/gallery-11.JPG'); 
  }  

  /* alert */
  .alert {
  background-color: #F2AA98;
  }
  
  .alert-heading {
	  color: #fff;
	  }
  
   .alert p {
	   color: #fff;
   }
  
   .terms {
	   color: #fff;
	   }
  
  .free-trail-alert {
	  text-align: center;
  }


  /* Modal */

  .btn-modal {
	background-color: #F2AA98;
	border-color: transparent;
	color: white;
	text-transform: uppercase;
	letter-spacing: 2px;
	padding: 15px 30px;
	font-weight: 600;
  }
  
/* Media querys */

@media (min-width: 576px) {
  #img-3 { display:none;
 }
}

@media (min-width: 768px) {
	#img-3 { display:none;
   }
  }

@media only screen and (max-width: 576px) {
	.log-in-center { text-align: center; }
}

